# lambda-tensorflow-c-api

./: CMakeLists.txt  README.md  main.cpp
